#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([gdfmanager], [0.01], [gdfmanager@twistedserpent.xyz], [gdfmanager], [https://twistedserpent.xyz])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_MAINTAINER_MODE([enable])
AM_SILENT_RULES([yes])
AC_CONFIG_SRCDIR([gdfm.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
: ${CFLAGS="-Wall -O2 -g"}
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
